--- a/index.html
+++ b/index.html
@@ -7,19 +7,6 @@
     <title> ROCK PAPER SCISSORS </title>
 </head>
 <body>
-    <header>
-        <h1> Rock Paper Scissors </h1>
-        <p> Are you ready to play? </p>
-    </header>
-
-    <main>
-        <div>
-            
-        </div>
-    </main>
-
-    <footer>
-
-    </footer>
+    <script src="script.js"></script>
 </body>
 </html>
